--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ pandas>=1.5.0
 numpy>=1.23.0
 plotly>=5.0.0
 spacy>=3.5.0
-https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.5.0/pt_core_news_lg-3.5.0-py3-none-any.whl
 python-dotenv>=0.21.0
 nltk>=3.8.1
 folium>=0.14.0
@@ -13,3 +12,5 @@ scikit-learn>=1.2.0
 faker>=18.11.0
 wordcloud>=1.9.0
 matplotlib>=3.7.0
+geopandas>=0.12.0
+https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.5.0/pt_core_news_lg-3.5.0.tar.gz#egg=pt_core_news_lg
